# stringprint2

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENCE.txt  Vagrantfile  pyproject.toml  readme.md  requirements.txt  shell.py  vagrant_base.rb
.github/workflows/: image.yaml
charts/: __init__.py  chart_config.py  display.py  fields.py
charts/options/: base.py  chart_options.py  interpreter.py
conf/: chrome_setup.bash  config-example.yaml  packages  post_deploy_actions.bash  provisioner.sh
frontend/: admin.py  forms.py  models.py  views.py
frontend/migrations/: 0001_initial.py  0002_download.py  0003_usersettings_tokens.py  0004_tokensetting.py  0005_auto_20190502_0952.py
proj/: __init__.py  loaders.py  settings.py  universal.py  urls.py  wsgi.py
proj/conf/: config-example.yaml
script/: bootstrap  console  manage  server  setup  shell  stopserver  vagrant-provision
script/config/: packages
static/: config.json
static/css/: bootstrap.css  bootstrap.min.css  bootstrap3.css  fa_reduced-codes.css  fa_reduced-ie7.css  kindle.css  stringprint-core.css  stringprint-core.min.css  stringprint-default.css  stringprint-default.min.css  stringprint-front.css  text_mode.css
static/font/: fa_reduced.eot
static/js/: agietan.js  agietan.min.js  bootstrap.min.js  stringprint.js
static/licences/: CLIPBOARD.JS.LICENSE.txt
stringprint/: admin.py  compiler.py  functions.py  models.py  views.py
stringprint/migrations/: 0001_initial.py  0002_headerimage_image_vertical.py  0003_access_password.py  0004_article_public.py  0005_auto_20160802_1028.py  0006_asset_alt_text.py  (+35 more)
stringprint2/: __main__.py  cli.py  manage.py  monkey_config.py
(+176 files in other folders)
