[tool.poetry]
name = "stringprint2"
version = "0.1.0"
description = "Document publishing package"
authors = ["Alex Parsons <alex.parsons@mysociety.org>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "3.8.3"
Django = "2.2.25"
Markdown = "2.6.8"
Pillow = "8.3.2"
argparse = "1.2.1"
csscompressor = "0.9.4"
django-autoslug = "1.9.3"
django-markitup = "3.0.0"
django-pipeline = "1.6.11"
libsass = "0.12.3"
olefile = "0.44"
six = "1.10.0"
django-import-export = "1.2.0"
beautifulsoup4 = "4.10.0"
django-bootstrap-form = "3.4"
django-ipware = "2.1.0"
cobble = "0.1.3"
parsimonious = "0.8.1"
jsmin = "3.0.1"
dirsync = "2.2.3"
html2text = "2020.1.16"
selenium = "3.13"
tinify = "1.5.1"
invoke = "1.7.0"
unicodecsv = "0.14.1"
django-htmlmin = "0.11.0"
"ruamel.yaml" = "0.17.21"
PyPDF2 = "1.26.0"
mammoth = "1.4.18"
html2markdown = "0.1.7"
django_compressor = "2.2"
watchdog = "0.9"
webptools = "0.0.2"
python-Levenshtein = "0.12.0"
mkepub = "1.2"
django-static-precompiler = "2.1"
xlwt = "1.3.0"
openpyxl = "2.6.4"
xlrd = "1.2.0"
PyMuPDF = "1.18.16"
black = "22.3.0"
pylint = "1.4.0"
rich = "12.0.1"
cookiecutter = "1.7.3"
google-api-python-client = "2.42.0"
oauth2client = "4.1.3"
django-pipeline-csscompressor = {git = "https://github.com/mysociety/django-pipeline-csscompressor.git"}
useful-inkleby = {git = "https://github.com/ajparsons/useful_inkleby.git", rev = "d2"}
python-unsplash = {git = "https://github.com/ajparsons/python-unsplash.git"}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
